--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header>
          <nav >
             <ul>
-                <li><img class="imagem" src="/Teste/img/bde6cc43-6db3-4c1e-8feb-de068da7fe8e.jfif" alt="icon"></li>
-                <li><a href="#inicio"><b>Inicio</b></a></li>
-                <li><a href="#sobre"><B>Sobre</B></a></li>
-                <li><a href="#servico"><b>Serviços</b></a></li>
-                <li><a href="#equipe"><b>Equipe</b></a></li>
-                <li><a href="#contato"><b>Contato</b></a></li>
+                <li><a href="index.html"><img class="imagem" src="/Teste/img/Fisiovida logo.png" alt="icon"></a></li>
+                <li><a href="#inicio"><button type="button" class="btn btn-outline-success botao1"><b>Inicio</b></button></a></li>
+                <li><a href="#sobre"><button type="button" class="btn btn-outline-success botao1"><B>Sobre</B></button></a></li>
+                <li><a href="#servico"><button type="button" class="btn btn-outline-success botao1"><b>Serviços</b></button></a></li>
+                <li><a href="#equipe"><button type="button" class="btn btn-outline-success botao1"><b>Equipe</b></button></a></li>
+                <li><a href="#contato"><button type="button" class="btn btn-outline-success botao1"><b>Contato</b></button></a></li>
                 <li><button type="button" class="btn btn-outline-success botaol">Login</button></li>
             </ul>
         </nav>
