--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li><a href="#servico"><button type="button" class="btn btn-outline-success botao1"><b>Serviços</b></button></a></li>
                 <li><a href="#equipe"><button type="button" class="btn btn-outline-success botao1"><b>Equipe</b></button></a></li>
                 <li><a href="#contato"><button type="button" class="btn btn-outline-success botao1"><b>Contato</b></button></a></li>
-                <li><button type="button" class="btn btn-outline-success botaol">Login</button></li>
+                <li><button type="button" class="btn btn-outline-success botaoA">Login</button></li>
+                <li><button type="button" class="btn btn-outline-success botaoB">Register</button></li>
             </ul>
         </nav>
     </header>
