--- a/sobre.html
+++ b/sobre.html
@@ -18,14 +18,14 @@
     <header>
          <nav >
             <ul>
-                <li><a href="index.html"><img class="imagem" src="/img/Fisiovida logo.png" alt="icon"></a></li>
-                <li><a href="index.html"><button type="button" class="btn btn-outline-body active botao1"><b>Inicio</b></button></a></li>
-                <li><a href="sobre.html"><button type="button" class="btn btn-outline-body botao1"><B>Sobre</B></button></a></li>
-                <li><a href="servico.html"><button type="button" class="btn btn-outline-body botao1"><b>Serviços</b></button></a></li>
-                <li><a href="equipe.html"><button type="button" class="btn btn-outline-body botao1"><b>Equipe</b></button></a></li>
-                <li><a href="contato.html"><button type="button" class="btn btn-outline-body botao1"><b>Contato</b></button></a></li>
-                <li><button type="button" class="btn btn-outline-light botaoA">Login</button></li>
-                <li><button type="button" class="btn btn-outline-light botaoB">Register</button></li>
+                <li><a href="index.html"><img class="imagem" src="/Teste/img/Fisiovida logo.png" alt="icon"></a></li>
+                <li><a href="index.html"><button type="button" class="btn btn-outline-success botao1"><b>Inicio</b></button></a></li>
+                <li><a href="sobre.html"><button type="button" class="btn btn-outline-success active botao1"><B>Sobre</B></button></a></li>
+                <li><a href="servico.html"><button type="button" class="btn btn-outline-success botao1"><b>Serviços</b></button></a></li>
+                <li><a href="equipe.html"><button type="button" class="btn btn-outline-success botao1"><b>Equipe</b></button></a></li>
+                <li><a href="contato.html"><button type="button" class="btn btn-outline-success botao1"><b>Contato</b></button></a></li>
+                <li><button type="button" class="btn btn-outline-success botaoA">Login</button></li>
+                <li><button type="button" class="btn btn-outline-success botaoB">Register</button></li>
             </ul>
         </nav>
     </header>
