--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  
+</head>
     <link rel="stylesheet" href="style.css">
     <title> Fisiovida</title>
     <link rel="icon" href="img/Icone fisiovida.jfif">
@@ -15,19 +19,65 @@
     </style>
 </head>
 <body>
+     <div class="container-fluid bg-light ps-1 pe-0 d-none d-lg-block">
+        <div class="row gx-0">
+            <div class="col-md-6 text-center text-lg-start mb-0">
+                <div class="d-inline-flex align-items-center">
+                    <small class="py-2"><i class="far fa-clock text-primary me-2"></i>Aberto de Segunda-feira a Sexta-feira das 8 : 00 AM até 18 : 00 PM.</small>
+                </div>
+            </div>
+            <div class="col-md-6 text-center text-lg-end">
+                <div class="position-relative d-inline-flex align-items-center bg-success text-white top-shape px-4">
+                    <div class="me-3 pe-3 border-end py-2">
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@example.com</p>
+                    </div>
+                    <div class="py-2">
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <header>
-         <nav >
+        
+         <nav>
             <ul>
-                <li><a href="index.html"><img class="imagem" src="/img/Fisiovida logo.png" alt="icon"></a></li>
+                <li><a href="index.html"><img class="image" src="/Fisiovida-Paginas-iniciais/img/Fisiovida logo.png" alt="icon"></a></li>
                 <li><a href="index.html"><button type="button" class="btn btn-outline-body active botao1"><b>Inicio</b></button></a></li>
                 <li><a href="sobre.html"><button type="button" class="btn btn-outline-body botao1"><B>Sobre</B></button></a></li>
                 <li><a href="servico.html"><button type="button" class="btn btn-outline-body botao1"><b>Serviços</b></button></a></li>
                 <li><a href="equipe.html"><button type="button" class="btn btn-outline-body botao1"><b>Equipe</b></button></a></li>
                 <li><a href="contato.html"><button type="button" class="btn btn-outline-body botao1"><b>Contato</b></button></a></li>
-                <li><button type="button" class="btn btn-outline-light botaoA">Login</button></li>
-                <li><button type="button" class="btn btn-outline-light botaoB">Register</button></li>
+                <li><button type="button" class="btn btn-outline-light botaoB"><i class="bi bi-calendar-event-fill">  Agendar</i></button></li>
+                <li><button type="button" class="btn btn-outline-light botaoA"><i>Login</i></button></li>
             </ul>
         </nav>
     </header>
+
+
+    <div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/Fisiovida-Paginas-iniciais/img/Imagem de fisioterapia.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/Fisiovida-Paginas-iniciais/img/Imagem de fisioterapia 2.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
