--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Fisiovida-Paginas-iniciais/css/style.css">
     <title> Fisiovida</title>
     <link rel="icon" href="img/Icone fisiovida.jfif">
     <style>
@@ -23,16 +23,16 @@
         <div class="row gx-0">
             <div class="col-md-6 text-center text-lg-start mb-0">
                 <div class="d-inline-flex align-items-center">
-                    <small class="py-2"><i class="far fa-clock text-primary me-2"></i>Aberto de Segunda-feira a Sexta-feira das 8 : 00 AM até 18 : 00 PM.</small>
+                    <small class="py-2"><i class="container bi bi-clock me-2"></i>Aberto de Segunda-feira a Sexta-feira das 8 : 00 AM até 18 : 00 PM.</small>
                 </div>
             </div>
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-success text-white top-shape px-4">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@example.com</p>
+                        <p class="m-0"><i class="bi bi-envelope-at me-3"></i>info@example.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</p>
+                        <p class="m-0"><i class="bi bi-telephone me-3"></i>+012 345 6789</p>
                     </div>
                 </div>
             </div>
@@ -68,20 +68,20 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/Fisiovida-Paginas-iniciais/img/Imagem de fisioterapia.png" class="d-block w-100" alt="...">
+      <img src="/Fisiovida-Paginas-iniciais/img/Imagem de fisioterapia.png" class="d-block w-100" alt="imagem" style="opacity: 0.5;">
 
     <div class="carousel-caption dnone d-md-block">
     
     <div class="d-flex justify-content-center align-items-center vh-10">
     
-    <div class="card-group">
-    <div class="card text-bg-primary">
-    <div class="card-header">Horários</div>
-    <div class="card-body ">
-      <p class="card-text"></p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-    </div>
-    </div>
+      <div class="card-group">
+        <div class="card text-bg-primary">
+          <div class="card-header">Horários</div>
+            <div class="card-body ">
+            <p class="card-text"></p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
     <div class="card text-bg-success">
     <div class="card-header">Fisiovida</div>
     <div class="card-body">
@@ -103,9 +103,15 @@
     </div>
     </div>
 
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="/Fisiovida-Paginas-iniciais/img/Imagem de fisioterapia 2.png" class="d-block w-100" alt="...">
-    </div>
+    <div class="p-3" style="max-width: 900px;">
+      <div class="position-absolute top-50 start-50 translate-middle">
+          <h5 class="text-white text-uppercase mb-3 text-bg-primary" style="text-align: center;">Fisiovida</h5>
+          <h1 class="display-1 text-white mb-md-4">A melhor clinica de atendimento presencial</h1>
+   </div>
+   </div>
+  </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
